<resources>
    <string name="app_name">Turn Up My Volume</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">Start</string>
    <string name="title_application">Turn Up My Volume!</string>
    <string name="start">Start</string>
    <string name="enter_bitcoin_address">Enter your bitcoin address to start</string>
    <string name="stopService">Stop Service</string>
    <string name="pref_bitcoin_address">Bitcoin Address</string>
    <string name="pref_increment">Trigger</string>
    <string name="pref_increment_summary">Set the amount of Bits (1 mil Bits = 1 Bitcoin) to Trigger the Volume increase </string>
    <string name="startService">Start Service</string>
    <string name="serviceStatus">Service Status</string>
    <string name="description">Sending 100 Bits to your Bitcoin Address will turn up your Ringtone volume to the maximum!</string>
    <string name="pref_bitcoin_address_summary">Enter your Bitcoin Address here, changing the Bitcoin Address requires stopping and starting the Service</string>
</resources>
