<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <EditTextPreference
        android:key="address"
        android:title="@string/pref_bitcoin_address"
        android:summary="@string/pref_bitcoin_address_summary"
        android:defaultValue=""
        android:selectAllOnFocus="true"
        android:inputType="text"
         />

    <EditTextPreference
        android:key="increment"
        android:title="@string/pref_increment"
        android:defaultValue="100"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:summary="@string/pref_increment_summary"
        />

</PreferenceScreen>
